--- a/a/templates/a/balls.html
+++ b/a/templates/a/balls.html
@@ -4,6 +4,17 @@
             width: 400px;
             height: 400px;
             background-color: #a0a0a0;
+            margin: auto;
+        }
+        
+        .container {
+            text-align: center;
+            max-width: 600px;
+        }
+        
+        .title {
+            margin: auto;
+          
         }
     </style>
     <script>
@@ -101,5 +112,9 @@
     </script>
 </head>
 <body onload="CreateSVG ()">
+  <div class="container">
+    <div class="title"><h2>{{message}}<h2></div>
+    <br>
     <div id="svgContainer"></div>
+  </div>
 </body>
